...
            android:id="@+id/btn_clear"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@+id/btn_set_location"
            app:layout_constraintHorizontal_bias="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_set_location_test"
            android:layout_width="2dp"
            android:layout_height="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />
...
